# fastapi-project-creator

./: .gitignore  LICENSE  README.md  pyproject.toml
fastapi-project-creator/: __init__.py  main.py
fastapi_project_creator/: __init__.py  main.py
